feat: ent go implementation, with client and addresses tables. feat: upload file api endpoint saving data to database using ent. chore: swagger docs tweaks.
